update:结合dcloud添加安卓退出app功能

--- a/public/index.html
+++ b/public/index.html
@@ -36,5 +36,30 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+			document.addEventListener('plusready', function() {
+			    //首页返回键处理
+			    //处理逻辑：1秒内，连续两次按返回键，则退出应用；
+			    var first = null;
+			    plus.key.addEventListener('backbutton', function(){
+			    	if (window.location.hash === '#/') {
+				        //首次按键，提示‘再按一次退出应用’
+				        if(!first){
+				            first = new Date().getTime();
+				            plus.nativeUI.toast('再按一次退出应用');
+				            setTimeout(function(){
+				                first = null;
+				            },1000);
+				        }else{
+				            if(new Date().getTime()-first<1000){
+				                plus.runtime.quit();
+				            }
+				        }
+			        } else {
+			        	window.history.go(-1)
+			        }
+			    }, false);
+			}, false);
+		</script>
   </body>
 </html>
